fixed code blocks contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -109,7 +109,7 @@ img {
 }
 code {
   padding: 2px 5px;
-  background-color: rgb(var(--gray-light));
+  background-color: rgb(var(--gray));
   border-radius: 2px;
 }
 pre {
